--- a/front/public/index.html
+++ b/front/public/index.html
@@ -25,10 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script
-      type="text/javascript"
-      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=f36v2w1qcs"
-    ></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=193753c2c6c4ddb5899fc7cf8d6e0e9f"></script>
     <title>Web Project</title>
   </head>
   <body style="overflow-x: hidden">
