--- a/front/public/index.html
+++ b/front/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-252097560-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-252097560-1');
+</script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -28,6 +37,7 @@
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=193753c2c6c4ddb5899fc7cf8d6e0e9f"></script>
     <title>Web Project</title>
   </head>
+
   <body style="overflow-x: hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
